# swasthai-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
openenv_submission/: Dockerfile  README.md  __init__.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
openenv_submission/server/: __init__.py  app.py  environment.py
server/: __init__.py  app.py  environment.py
tests/: test_env.py  test_grader.py
